# api_exercise

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
api_exercise.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: main.py
app/db/: database.py
app/models/: pagination.py  user.py
app/routers/: users.py
app/schemas/: user.py
app/service/: service_users.py
core/: config.py  log.py  tools.py
