
[project]
name = "api-exercise"
version = "0.1.0"
description = "API Exercise Project"
requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "python-dotenv",
    "pydantic",
    "alembic",
    "bcrypt",
    "passlib",
    "pydantic-settings",
    "email-validator",
    "psycopg2-binary>=2.9.10",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]  # Apenas a pasta 'app' é um pacote
